--- a/UnitTestResults/VoltMon_UpdateAdc_u8Results/artifacts/gcov/gcovr/GcovCoverageResults.html
+++ b/UnitTestResults/VoltMon_UpdateAdc_u8Results/artifacts/gcov/gcovr/GcovCoverageResults.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2026-01-30 13:39:37</td>
+      <td>2026-01-30 13:39:49</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -46,8 +46,8 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>45</td>
-      <td>45</td>
+      <td>44</td>
+      <td>44</td>
       <td class="coverage-high">100.0%</td>
     </tr>
     <tr>
@@ -58,8 +58,8 @@
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>4</td>
-      <td>4</td>
+      <td>6</td>
+      <td>6</td>
       <td class="coverage-high">100.0%</td>
     </tr>
   </table>
@@ -90,17 +90,17 @@
 
   <tr>
     <th scope="row">
-      <a href="GcovCoverageResults.VoltMon_Init_u8.c.c3acef46a7c0e49a3ea0034ee2c2a50a.html">VoltMon_Init_u8.c</a>
+      <a href="GcovCoverageResults.VoltMon_UpdateAdc_u8.c.68e6e99a83399555123cbf2147fbeb96.html">VoltMon_UpdateAdc_u8.c</a>
     </th>
     <td>
       <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
     <td class="CoverValue line-coverage coverage-high">100.0%</td>
-    <td class="CoverValue line-coverage coverage-high">45 / 45</td>
+    <td class="CoverValue line-coverage coverage-high">44 / 44</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
     <td class="CoverValue function-coverage coverage-high">13 / 13</td>
     <td class="CoverValue branch-coverage coverage-high">100.0%</td>
-    <td class="CoverValue branch-coverage coverage-high">4 / 4</td>
+    <td class="CoverValue branch-coverage coverage-high">6 / 6</td>
   </tr>
 
 </table>
